--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         <div class="container gallery">
             
             <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Panel</h3>
+                        </div>
+                        <div class="panel-body">
+                            Panel content
+                        </div>
+                    </div>
+                </div>
             </div>
         
         </div>
