--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
             </div>
         
         </div>
-    <script data-main="main.js" src="components/requirejs/require.js"></script>
+    <script data-main="js/main.js" src="components/requirejs/require.js"></script>
   </body>
 </html>
