--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta name="description" content="">
         <meta name="author" content="">
         
-        <link href="components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
         <!-- link rel="stylesheet" href="css/bootstrap-theme.min.css" -->
-        <link rel="stylesheet" href="components/nvd3/src/nv.d3.css">
+        <link rel="stylesheet" href="lib/nvd3/src/nv.d3.css">
     </head>
     <body>
   
@@ -50,6 +50,6 @@
             </div>
         
         </div>
-    <script data-main="js/main.js" src="components/requirejs/require.js"></script>
+    <script data-main="js/main.js" src="lib/requirejs/require.js"></script>
   </body>
 </html>
