--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <div class="container gallery">
             
             <div class="row">
-                <div id="line-chart" class="col-lg-12">
-                </div>
+                <div id="line-chart" class="col-lg-12"></div>
+            </div>
+
+            <div class="row">
+                <div id="pie-chart" class="col-lg-12"></div>
             </div>
         
         </div>
