--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
         <!-- link rel="stylesheet" href="css/bootstrap-theme.min.css" -->
         <link rel="stylesheet" href="lib/nvd3/src/nv.d3.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
   
