Change line into accounts throughout the project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container gallery">
             
             <div class="row">
-                <div id="line-chart" class="col-lg-12"></div>
+                <div id="accounts" class="col-lg-12"></div>
             </div>
 
             <div class="row">
