--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <div class="container gallery">
             
             <div class="row">
-                <div id="accounts" class="col-lg-12"></div>
+                <div id="accounts-line" class="col-lg-12"></div>
+            </div>
+
+            <div class="row">
+                <div id="accounts-stacked-bar" class="col-lg-12"></div>
             </div>
 
             <div class="row">
