Add investments view

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </div>
 
             <div class="row">
-                <div id="pie-chart" class="col-lg-12"></div>
+                <div id="investments" class="col-lg-6"></div>
+                <div id="assets" class="col-lg-6"></div>
             </div>
         
         </div>
