--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <div id="investments" class="col-lg-6"></div>
                 <div id="assets" class="col-lg-6"></div>
             </div>
+
+            <div class="row">
+                <div id="accounts-status" class="col-lg-12"></div>
+            </div>
         
         </div>
     <script data-main="js/main.js" src="lib/requirejs/require.js"></script>
